--- a/index.html
+++ b/index.html
@@ -16,24 +16,20 @@
 </head>
 
 <body>
-  <div class="container">
-    <header>
+  <header class="container">
       <h1>404 not found</h1>
-    </header>
-    <div class="container-main ">
-      <div class="container-flex">
-        <div class="box-image col ">
+  </header>
+    <div class="container row-flex">
+      <div class="box-image col ">
           <img src="Man_angry_because_error_404_generated.jpg" alt="Man angry">
           <span>Vecteezy.com</span>
         </div>
-
-        <div class="box-text col col-flex">
+      <div class="box-text col">
           <h2>I have a bad news for you </h2>
           <p>The page you are looking for might be removed or is temporarily unvailable </p>
           <a class="btn" href="#">Back To Home</a>
         </div>
       </div>
-    </div>
   </div>
   <footer>
     <p>created by <a href="https://github.com/IsabelleCrispim">Isabelle Cristine</a> -devChallenges.io</p>
